# typedstruct

./: .gitignore  .pyre_configuration  README.md  pyproject.toml  test_typedstruct.py  typedstruct.py
.github/: dependabot.yml
.github/workflows/: ci.yaml
