[tool.poetry]
name = "typedstruct"
version = "0.1.0"
description = "A wrapper around the struct library with support for PEP 484 types."
authors = ["Luiz Ribeiro <luizribeiro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8 = "3.8.3"
green = "3.2.1"
pyexpect = "1.0.20"
pyre-check = "0.0.52"
python-language-server = "0.35.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
