[tool.poetry]
name = "typedstruct"
version = "0.1.0"
description = "A wrapper around the struct library with support for PEP 484 types."
authors = ["Luiz Ribeiro <luizribeiro@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/luizribeiro/typedstruct"
repository = "https://github.com/luizribeiro/typedstruct"
keywords = ["typing", "structs"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8 = "3.8.4"
green = "3.2.4"
pyexpect = "1.0.20"
pyre-check = "0.0.57"
python-language-server = "0.35.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
